# velmo-agent-instable

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: conversations_problematiques.json
docs/: 1_diagnostic_conversations_problematiques.md  2_plan_ecarts_non_regression.md  3_non_regression_et_decisions.md
src/velmo/: __init__.py  agent.py  chat.py  config.py  flow.py  guardrails.py  llm.py  memory.py  prompts.py  regression.py  scope.py  tools.py
tests/: conftest.py  test_agent.py  test_config.py  test_flow.py  test_guardrails.py  test_memory.py  test_prompts.py  test_regression.py  test_scope.py  test_tools.py
