[project]
name = "velmo-agent-instable"
version = "0.3.1"
description = "Assistant de support conversationnel Velmo (LangChain + Azure AI Inference)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "langchain>=1.2,<2.0",
    "langchain-core>=1.0,<2.0",
    "langchain-azure-ai>=1.0,<2.0",
    "azure-ai-inference>=1.0.0b9",
    "pydantic>=2.7,<3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<0.10",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/velmo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
